force-app/main/default/objects/Lead__c/fields/Actual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Actual_Budget__c</fullName>
    <label>Actual Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>