force-app/main/default/objects/Lead__c/fields/Actual_Budget_in_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Budget_in_Lakhs__c</fullName>
    <label>Actual Budget (in Lakhs)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>