force-app/main/default/objects/Lead__c/fields/Apply_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Apply_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field to assign the Lead to a member of the Presales Team. The assignment occurs only if the Presales Team is maintained on the Project and has active team members, designating one as the Lead owner using the Round Robin method.</description>
    <inlineHelpText>This field to assign the Lead to a member of the Presales Team. The assignment occurs only if the Presales Team is maintained on the Project and has active team members, designating one as the Lead owner using the Round Robin method.</inlineHelpText>
    <label>Apply Round Robin</label>
    <type>Checkbox</type>
</CustomField>