force-app/main/default/objects/Lead__c/fields/Booking_Done__c.field-meta.xml
<CustomField>
    <fullName>Booking_Done__c</fullName>
    <formula>IF( ISPICKVAL( Opportunity__r.Stage__c , &apos;Booked&apos;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>