force-app/main/default/objects/Lead__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget of 50 to 75 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 75 lac to 1Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 1 to 1.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 1.25 to 1.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 1.50 to 1.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 1.75 to 2.00 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 2.00 to 2.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 2.25 to 2.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 2.50 to 2.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 2.75 to 3.00 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 3.00 to 3.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 3.25 to 3.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 3.50 to 3.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 3.75 to 4.00 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 4.00 to 4.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 4.25 to 4.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 4.50 to 4.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 4.75 to 5.00 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 5.00 to 5.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 5.25 to 5.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 5.50 to 5.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 5.75 to 6.00 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 6.00 to 6.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 6.25 to 6.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 6.50 to 6.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 6.75 to 7.00 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 7.00 to 7.25 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 7.25 to 7.50 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 7.50 to 7.75 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 7.75 to 8.00 Cr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>