force-app/main/default/objects/Lead__c/fields/Buying_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Buying_Purpose__c</fullName>
    <label>Buying Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Use</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>