force-app/main/default/objects/Lead__c/fields/Called_by__c.field-meta.xml
<CustomField>
    <fullName>Called_by__c</fullName>
    <label>Called by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>