force-app/main/default/objects/Lead__c/fields/Campaign_Custom__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Custom</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>