force-app/main/default/objects/Lead__c/fields/Channnel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channnel_Partner__c</fullName>
    <label>Channnel Partner</label>
    <length>16</length>
    <type>Text</type>
</CustomField>