force-app/main/default/objects/Lead__c/fields/Clash__c.field-meta.xml
<CustomField>
    <fullName>Clash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clash</label>
    <type>Checkbox</type>
</CustomField>