force-app/main/default/objects/Lead__c/fields/Clash_Details__c.field-meta.xml
<CustomField>
    <fullName>Clash_Details__c</fullName>
    <label>Clash Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>