force-app/main/default/objects/Lead__c/fields/Conversation_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Start_Date_Time__c</fullName>
    <label>Conversation Start Date/Time</label>
    <type>DateTime</type>
</CustomField>