force-app/main/default/objects/Lead__c/fields/Converted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>