force-app/main/default/objects/Lead__c/fields/ConvertedAccountId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConvertedAccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (ConvertedAccountId)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>