force-app/main/default/objects/Lead__c/fields/Conveted_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Conveted_DateTime__c</fullName>
    <label>Conveted DateTime</label>
    <type>DateTime</type>
</CustomField>