force-app/main/default/objects/Lead__c/fields/CP_Lead__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Lead</label>
    <referenceTo>CP_Lead__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>