force-app/main/default/objects/Lead__c/fields/Current_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Project_Name__c</fullName>
    <label>Current Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Project_Name</valueSetName>
    </valueSet>
</CustomField>