force-app/main/default/objects/Lead__c/fields/Current_Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Resident_Status__c</fullName>
    <label>Current Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Resident_Status</valueSetName>
    </valueSet>
</CustomField>