force-app/main/default/objects/Lead__c/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <formula>IF( TEXT(Lead_Stage__c) &lt;&gt; &apos;Visit Done&apos; , &apos;Lead&apos;,
IF( TEXT(Lead_Stage__c) = &apos;Visit Done&apos; &amp;&amp;   ISBLANK(ConvertedOpportunityId__r.Booking__c) , &apos;Visit Done&apos;,
IF( TEXT(Lead_Stage__c) = &apos;Visit Done&apos; &amp;&amp;    NOT(ISBLANK(ConvertedOpportunityId__r.Booking__c)) , &apos;Booked&apos;, &apos; &apos; )))</formula>
    <label>Customer Category</label>
    <type>Text</type>
</CustomField>