force-app/main/default/objects/Lead__c/fields/Enquiry_Count__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enquiry Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>