force-app/main/default/objects/Lead__c/fields/First_Visit_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Confirmed_Date__c</fullName>
    <label>First Visit Confirmed Date</label>
    <type>Date</type>
</CustomField>