force-app/main/default/objects/Lead__c/fields/Fresh_Lead__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Lead__c</fullName>
    <formula>TEXT(Stage__c) = &quot;Incoming&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fresh Lead</label>
    <type>Checkbox</type>
</CustomField>