force-app/main/default/objects/Lead__c/fields/House_No__c.field-meta.xml
<CustomField>
    <fullName>House_No__c</fullName>
    <label>House No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>