force-app/main/default/objects/Lead__c/fields/Is_First_Presales_call_answered_done__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Presales_call_answered_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Presales call answered done</label>
    <type>Checkbox</type>
</CustomField>