force-app/main/default/objects/Lead__c/fields/IS_Send_Before_2hrs__c.field-meta.xml
<CustomField>
    <fullName>IS_Send_Before_2hrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Send Before 2hrs</label>
    <type>Checkbox</type>
</CustomField>