force-app/main/default/objects/Lead__c/fields/Is_Serviced_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Serviced_Flag__c</fullName>
    <formula>IF( Is_Serviced__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 20, 20), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Serviced</label>
    <type>Text</type>
</CustomField>