force-app/main/default/objects/Lead__c/fields/IS_SMS_Send_Before_24hrs__c.field-meta.xml
<CustomField>
    <fullName>IS_SMS_Send_Before_24hrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS SMS Send Before 24hrs</label>
    <type>Checkbox</type>
</CustomField>