force-app/main/default/objects/Lead__c/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically checked when the Lead is successfully converted into an Account and Opportunity.</description>
    <inlineHelpText>This field is automatically checked when the Lead is successfully converted into an Account and Opportunity.This field is automatically checked when the Lead is successfully converted into an Account and Opportunity.</inlineHelpText>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>