force-app/main/default/objects/Lead__c/fields/Last_Presale_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Presale_Call_Date__c</fullName>
    <label>Last Presale Call Date</label>
    <type>DateTime</type>
</CustomField>