force-app/main/default/objects/Lead__c/fields/Last_Presales_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Presales_Call_Status__c</fullName>
    <label>Last Presales Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>