force-app/main/default/objects/Lead__c/fields/Lead_Created_From__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_From__c</fullName>
    <label>Lead Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>