force-app/main/default/objects/Lead__c/fields/Lead_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Identifier__c</fullName>
    <label>Lead Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>