force-app/main/default/objects/Lead__c/fields/Lead_Notification_after_3Hr__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notification_after_3Hr__c</fullName>
    <label>Lead Notification after 3Hr</label>
    <type>DateTime</type>
</CustomField>