force-app/main/default/objects/Lead__c/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
                <default>true</default>
                <label>Incoming</label>
            </value>
            <value>
                <fullName>SNP</fullName>
            </value>
            <value>
                <fullName>Prospects</fullName>
            </value>
            <value>
                <fullName>Visit confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>