force-app/main/default/objects/Lead__c/fields/Lead_Sub_Stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Stage_Reason__c</fullName>
    <label>Lead Sub Stage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Sub_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Substage_Reason</valueSetName>
    </valueSet>
</CustomField>