force-app/main/default/objects/Lead__c/fields/Lead_Sub_Stages__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Stages__c</fullName>
    <label>Lead Sub-Stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Sub_Stage</valueSetName>
    </valueSet>
</CustomField>