force-app/main/default/objects/Lead__c/fields/Lead_to_Walkin_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_Walkin_Date__c</fullName>
    <formula>IF(
    AND(
        IsConverted__c,
        NOT(ISBLANK(Opportunity__r.First_Site_Visit_Date__c))
    ),
    DATEVALUE(Opportunity__r.First_Site_Visit_Date__c) - DATEVALUE(CreatedDate),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead to Walkin Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>