force-app/main/default/objects/Lead__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <label>Locality</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>