force-app/main/default/objects/Lead__c/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost</label>
    <type>Checkbox</type>
</CustomField>