force-app/main/default/objects/Lead__c/fields/Manual_Lead_Convert__c.field-meta.xml
<CustomField>
    <fullName>Manual_Lead_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;Used for bulk uploading and conversion of leads.&quot;</description>
    <inlineHelpText>&quot;Used for bulk uploading and conversion of leads.&quot;</inlineHelpText>
    <label>Manual Lead Convert</label>
    <type>Checkbox</type>
</CustomField>