force-app/main/default/objects/Lead__c/fields/Master_Source__c.field-meta.xml
<CustomField>
    <fullName>Master_Source__c</fullName>
    <businessOwnerUser>umaid.shaikh@nandivardhan.com</businessOwnerUser>
    <label>Master Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Master_Source</valueSetName>
    </valueSet>
</CustomField>