force-app/main/default/objects/Lead__c/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>AMobile</label>
    <type>Phone</type>
</CustomField>