force-app/main/default/objects/Lead__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed in Pvt. company</fullName>
            </value>
            <value>
                <fullName>Govt. Employee</fullName>
            </value>
            <value>
                <fullName>Business – Small enterprise</fullName>
            </value>
            <value>
                <fullName>Shop owner</fullName>
            </value>
            <value>
                <fullName>Professionals like lawyers, doctors, CAs, etc</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Homemaker / Housewife</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>