force-app/main/default/objects/Lead__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>TextArea</type>
</CustomField>