force-app/main/default/objects/Lead__c/fields/Office_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Office_Pincode__c</fullName>
    <label>Office Pincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>