force-app/main/default/objects/Lead__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Leads (Opportunity)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>