force-app/main/default/objects/Lead__c/fields/Possession_Timeframe_Required__c.field-meta.xml
<CustomField>
    <fullName>Possession_Timeframe_Required__c</fullName>
    <label>Possession Timeframe Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Move in (RTMI)</fullName>
            </value>
            <value>
                <fullName>Under Construction (UC – 1 to 2 years)</fullName>
            </value>
            <value>
                <fullName>Under Construction (UC – 2 to 3 years)</fullName>
            </value>
            <value>
                <fullName>Under Construction (UC – More than 3 years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>