force-app/main/default/objects/Lead__c/fields/Presale_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Presale_Call_Comment__c</fullName>
    <label>Presale Call Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>