force-app/main/default/objects/Lead__c/fields/Presale_Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Presale_Date_of_Visit__c</fullName>
    <label>Presale Date of Visit</label>
    <type>DateTime</type>
</CustomField>