force-app/main/default/objects/Lead__c/fields/Presale_Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Presale_Next_Follow_up_Date__c</fullName>
    <label>Presale Next Follow-up Date</label>
    <type>DateTime</type>
</CustomField>