force-app/main/default/objects/Lead__c/fields/Presales_Call_Service_Aging__c.field-meta.xml
<CustomField>
    <fullName>Presales_Call_Service_Aging__c</fullName>
    <formula>IF(
    ISBLANK(First_Presales_Call_Date__c	),
    NULL,
    (First_Presales_Call_Date__c - CreatedDate) * 24 * 60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presales Call Service Aging (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>