force-app/main/default/objects/Lead__c/fields/Presales_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Presales_Call_Status__c</fullName>
    <label>Presales Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Status</valueSetName>
    </valueSet>
</CustomField>